# PhysicsModelingSystem

./: .gitignore  .gitmodules  Build_Debug.bat  Build_Release.bat  CMakeLists.txt  CMakePresets.json  Makefile  README.md  Run_Debug.bat  Run_Release.bat  app.cpp  build.bat  run.bat
include/: camera.hpp  cameraClass.hpp  custom_types.hpp  force.hpp  fwd_math.hpp  globalSettings.hpp  graphics.hpp  hardware_input.hpp  lightClass.hpp  lighting.hpp  math.hpp  meshClass.hpp  model.hpp  modelClass.hpp  particle.hpp  shaderClass.hpp  shaders.hpp  sys_callbacks.hpp  types.hpp  utility.hpp
include/math/: math.hpp
include/types/: mat3x3.hpp  mat4x4.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vertex.hpp  vertex2.hpp  vertex3.hpp  vertex4.hpp
models/: cube.txt  plate.txt
old/: app.cpp
shaders/: base_fragment.glsl  base_vertex.glsl  instance_fragment.glsl  instance_vertex.glsl  light_fragment.glsl  light_vertex.glsl  multiple_fragment.glsl  multiple_vertex.glsl  physics_vertex.glsl  tutorial_vertex.glsl
shaders/unused/: phong_fragment.glsl  phong_vertex.glsl  physics_fragment.glsl  physics_vertex.glsl
src/: CMakeLists.txt  app.cpp  camera.cpp  force.cpp  fwd_math.hpp  graphics.cpp  hardware_input.cpp  math.cpp  meshClass.cpp  model.cpp  modelClass.cpp  shaderClass.cpp  shaders.cpp  types.hpp  utility.cpp
src/Core/: Application.cpp  Application.hpp  CMakeLists.txt  Input.hpp  Mouse.cpp  Window.cpp  Window.hpp  app.cpp  globalSettings.hpp  hardware_input.cpp  mouseClass.hpp  sys_callbacks.hpp  windowClass.cpp  windowClass.hpp
src/ECS/: CMakeLists.txt  Components.cpp  Components.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp
src/Events/: ApplicationEvents.cpp  ApplicationEvents.hpp  AsyncEvent.cpp  CMakeLists.txt  Event.hpp  EventListener.cpp  EventListener.hpp  EventNotifier.cpp  EventNotifier.hpp  EventTypes.hpp  KeyEvents.cpp  KeyEvents.hpp  MouseEvents.cpp  MouseEvents.hpp  WindowEvents.cpp  WindowEvents.hpp
src/Events/AsyncEvents/: AsyncEvent.cpp  AsyncEvent.hpp
src/Math/: CMakeLists.txt  math.hpp
src/Physics/: CMakeLists.txt  force.cpp  force.hpp
src/Platform/: Makefile
src/Platform/OpenGL/: CMakeLists.txt  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLRenderAPI.cpp  OpenGLRenderAPI.hpp
src/Platform/STB/: stb.cpp
src/Platform/Windows/: CMakeLists.txt  WindowsInput.cpp  WindowsWindow.cpp  WindowsWindow.hpp
src/Renderer/: CMakeLists.txt  Camera.hpp  EditorCamera.cpp  EditorCamera.hpp  ElementBuffer.cpp  ElementBuffer.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Mesh.cpp  Mesh.hpp  RenderAPI.cpp  RenderAPI.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  graphics.cpp  graphics.hpp  meshClass.cpp  meshClass.hpp  shaderClass.cpp  shaderClass.hpp
src/Scene/: CMakeLists.txt  Entity,hpp  Entity.cpp  Entity.hpp  Model.cpp  Model.hpp  Scene.cpp  Scene.hpp  camera.cpp  cameraClass.hpp  modelClass.cpp  modelClass.hpp
src/Types/: CMakeLists.txt  GUID.cpp  GUID.hpp  mat3x3.hpp  mat4x4.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vertex.hpp
src/Utils/: CMakeLists.txt  utility.cpp  utility.hpp
